[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cards/Card.gd" type="Script" id=1]
[ext_resource path="res://Asset/frame.png" type="Texture" id=2]
[ext_resource path="res://Asset/back/MonsterBack.png" type="Texture" id=3]
[ext_resource path="res://Asset/slave.png" type="Texture" id=5]
[ext_resource path="res://Cards/TextureButton.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 17.6777

[node name="CardBase" type="MarginContainer"]
rect_scale = Vector2( 0.4, 0.4 )
script = ExtResource( 1 )

[node name="Card" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Border" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CardBack" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]

[node name="CardArea" type="TextureButton" parent="Node2D"]
margin_left = -153.0
margin_top = -234.0
margin_right = 153.0
margin_bottom = 234.0
script = ExtResource( 6 )

[node name="CardCollision" type="Area2D" parent="."]
scale = Vector2( 1, 1 )

[node name="CardCollisionArea" type="CollisionShape2D" parent="CardCollision"]
position = Vector2( 0, 215 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Node2D/CardArea" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/CardArea" to="." method="_on_TextureButton_mouse_exited"]
